# gata

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  communities.yaml  gata_newsroom_blueprint.md  gata_newsroom_implementation_plan.md  humor.yaml  pipeline.py  providers.yaml  pyproject.toml  uml.mmd
.github/workflows/: publish.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
agents/: agent_cultural_strategist.py  agent_explainer.py  agent_image_evaluator.py  agent_image_generator.py  agent_satirist.py  bundle_writer.py  cli.py  config_loader.py  dual_loop.py  runner.py  trend_scout.py  types.py
agents/sources/: base.py  newsapi.py
core/: bundle_writer.py  cli.py  config_loader.py  humor_utils.py  runner.py  types.py
docs/: architecture.md
gata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llm/: __init__.py  base.py  claude.py  dual_loop.py  fair_parallel_panel.py  gemini.py  grok.py  parallel_panel.py
specs/001-stage-1-core-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-community-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-cultural-strategist/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-text-output-bundle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-trend-scout/: data-model.md  (+5 more)
tests/: test_agent_cultural_strategist.py  test_agent_explainer.py  test_agent_image_evaluator.py  test_agent_image_generator.py  test_agent_satirist.py  test_bundle_writer.py  test_cli.py  test_config_loader.py  test_dual_loop.py  test_fair_parallel_panel.py  test_grok_provider.py  test_humor_utils.py  test_parallel_panel.py  test_pipeline.py  test_providers_config.py  test_sources_newsapi.py  test_trend_scout.py  test_types.py
(+208 files in other folders)
